got the functionality of product working, just need to fix the design

--- a/frontend/src/styles/output.css
+++ b/frontend/src/styles/output.css
@@ -4786,6 +4786,10 @@ select {
   height: 100vh;
 }
 
+.h-48 {
+  height: 12rem;
+}
+
 .min-h-0 {
   min-height: 0px;
 }
@@ -4914,6 +4918,10 @@ select {
   width: 2.25rem;
 }
 
+.w-96 {
+  width: 24rem;
+}
+
 .w-\[200\%\] {
   width: 200%;
 }
@@ -4924,10 +4932,6 @@ select {
 
 .w-full {
   width: 100%;
-}
-
-.w-96 {
-  width: 24rem;
 }
 
 .min-w-47\.5 {
